--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Jul 25 16:25:57 ICT 2023
-sdk.dir=C\:\\Users\\HP PAVILION\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
